--- a/my-react/src/App.css
+++ b/my-react/src/App.css
@@ -1,28 +1,5 @@
-.App {
-  text-align: center;
+html, body, h1, h2, h3, h4 ,h5, h6, ul, li, p,dl, dt, dd { margin: 0; padding: 0;}
+ul {
+  list-style: none;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+a {text-decoration: none;}
