--- a/my-react/src/pages/luck.css
+++ b/my-react/src/pages/luck.css
@@ -13,8 +13,8 @@ body:after{
 }
 
 #btn .cjBtn,.shanDeng .active,.shanDeng td{
-  width: 1rem;
-  height: 1rem;
+  width: 2.2rem;
+  height: 2rem;
   background-repeat: no-repeat;
 }
 
@@ -33,4 +33,9 @@ body:after{
 }
 .shanDeng table{
   margin: 0 auto;
+  table-layout: fixed;
+}
+img {
+  width: 100%;
+  height:100%;
 }
