--- a/my-react/src/pages/luck.css
+++ b/my-react/src/pages/luck.css
@@ -1,17 +1,26 @@
 
-body:after{
-  position: relative;
-}
 *{
   margin: 0;padding: 0;
 }
 
 .shanDeng{
-  width: 100%;
+  width: 37.5rem;
+  height: 105.65rem;
   background-size: 100%;
-  background-repeat: no-repeat;
+  background: url('../static/images/bg.png') no-repeat;
+  padding-top:16.6rem;
 }
-
+.actime{
+  text-align: center;
+  font-size:1.25rem;
+  font-family:MicrosoftYaHei;
+  color:rgba(255,213,145,1);
+  line-height:1.65rem;
+}
+.num{
+  width:15.25rem;
+  height:4.45rem;
+}
 #btn .cjBtn,.shanDeng .active,.shanDeng td{
   width: 2.2rem;
   height: 2rem;
